<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.together.TestContainerActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload products"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login"
        app:layout_constraintBottom_toTopOf="@id/upload_products"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toStartOf="@+id/migrateAnon"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_user"
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintBottom_toTopOf="@id/upload_products"
        app:layout_constraintStart_toEndOf="@id/login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_seller_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload SellerProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/upload_seller_profile"  />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginAnon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LoginAnon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logout"  />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/migrateAnon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="MigrateAnon"
        app:layout_constraintEnd_toStartOf="@id/loginAnon"
        app:layout_constraintBottom_toTopOf="@id/logout"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account"
        android:layout_marginEnd="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create"
        app:layout_constraintEnd_toStartOf="@id/logout"
        app:layout_constraintBottom_toTopOf="@id/upload_seller_profile"  />


    <FrameLayout
        android:id="@+id/load_indicator"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_gravity="center|center_vertical"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>